# slack-emoji

./: .gitignore  Cargo.toml  LICENSE
src/: main.rs
