[package]
name = "slack-emoji"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
chrono = "0.4.19"
cookie = "0.16.0"
derive_more = "0.99.17"
env_logger = "0.9.0"
fs-err = "2.7.0"
itertools = "0.10.3"
log = "0.4.17"
reqwest = { version = "0.11.10", features = ["blocking", "multipart", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_with = { version = "1.13.0", features = ["chrono"] }
toml = "0.5.9"
url = { version = "2.2.2", features = ["serde"] }
